# graphics-playground

./: .gitignore  CMakeLists.txt  TODO.md  bld.sh  imgui.ini  jump  main.cpp  rc.sh
include/: buffers.h  callbacks.h  camera.h  gui.h  mash.h  mesh.h  mesh_factory.h  model.h  modelManager.h  shaders.cpp  shaders.h  texture.h  utilities.h  vertex.h
shaders/: light.frag  light.vert  shader.frag  shader.vert
shaders/old/: mixShader.frag
src/: CMakeLists.txt  buffers.cpp  callbacks.cpp  camera.cpp  glad.c  gui.cpp  mash.cpp  mesh.cpp  model.cpp  modelManager.cpp  shaders.cpp  texture.cpp
